--- a/index.html
+++ b/index.html
@@ -105,17 +105,19 @@
 				</div>
 				<div class="col-lg-4">
 					<!-- Gambar -->
-					<img src="bird.jpg" class="img-fluid">
+					<img src="pp.jpg" class="img-fluid">
 				</div>
 				<div class="col-lg-4">
 					<table class="table">
 						<tr>
 							<th>Nama</th>
 							<th>Pendidikan</th>
+							<th>Sertifikasi</th>
 						</tr>
 						<tr>
 							<td>Rena Wijaya</td>
 							<td>S1 - Teknik Informatika</td>
+							<td>MTCNA</td>
 						</tr>
 					</table>
 				</div>
