--- a/profile.html
+++ b/profile.html
@@ -56,6 +56,8 @@
 					<p>Rena Wijaya</p>
 					<h5>Pendidikan</h5>
 					<p>S1 - Teknik Informatika</p>
+					<h5>Sertifikasi</h5>
+					<p>- MTCNA <br>- HTML Dasar (ruang guru academy)</p>
 				</div>
 				<div class="col-lg-6">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/k75NylpmfcM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
